src/objects/DEPIntegrationRule__c.object
<CustomObject>
    <fields>
        <fullName>ACC_DefaultOwnerUserId__c</fullName>
        <label>Default owner&apos;s user ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACC_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Accounts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACC_MapToErpOwner__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Map ownership to ERP accounts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACC_PracticeHrIdIsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Practice HR ID?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACC_RetainExistingSalesforceOwnerId__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Retain the Salesforce Account&apos;s current Owner ID ahead of any other ownership assignment logic</inlineHelpText>
        <label>Retain existing Salesforce owner ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADR_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Addresses?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADR_PracticeHrIdIsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Practice HR ID?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AR_CustomerGroup_IsExclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Exclusive (CG AR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AR_CustomerGroup__c</fullName>
        <label>AR Customer Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AR_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Accounts Receivables?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMP_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Campaigns?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CON_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Contracts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CST_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Consignment Stocks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Countries_IsExclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to exclude the countries specified; uncheck to include only the countries specified.</inlineHelpText>
        <label>Is Exclusive (Countries)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <inlineHelpText>Specify a list of countries (one per line) that this rule applies to. Leave blank to apply to all countries</inlineHelpText>
        <label>Countries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DEPCompanyCode__c</fullName>
        <label>DEP Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEPSourceSystemName__c</fullName>
        <label>DEP Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OO_CustomerGroup_IsExclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Exclusive (CG OR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OO_CustomerGroup__c</fullName>
        <label>OR Customer Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OO_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Open Orders?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_AccountType_IsExclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Exclusive (AT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_AccountTypes__c</fullName>
        <label>Account Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SA_CustomerGroup_IsExclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Exclusive (CG SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_CustomerGroup__c</fullName>
        <label>SA Customer Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SA_IncludeLinesWithoutCustomerOrderNo__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If unchecked, sales lines that do not have a Customer Order Number will not be uploaded.</inlineHelpText>
        <label>Include sales without a Customer Order #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Sales Analytics?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_WarehouseCode_IsExclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Exclusive (WC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_WarehouseCodes__c</fullName>
        <label>Warehouse Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SH_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Sales History?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUB_IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Subscriptions?</label>
        <type>Checkbox</type>
    </fields>
    <label>DEP Integration Rule</label>
    <nameField>
        <label>DEP Integration Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEP Integration Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>